crates/data-dict/tests/snapshots/validate_spec__s07_other_type_missing_examples.snap
---
source: crates/data-dict/tests/validate_spec.rs
assertion_line: 345
expression: "failing_diagnostic(\"spec/s07-other-type-missing-examples.yaml\")"
---
Error: [S07]
    ╭─[ spec/s07-other-type-missing-examples.yaml:10:15 ]
    │
 10 │       - name: label
    │               ──┬──  
    │                 ╰──── column `t.label` has type `string` but is missing the expected `examples` property
────╯

Error: [S07]
    ╭─[ spec/s07-other-type-missing-examples.yaml:12:15 ]
    │
 12 │       - name: code
    │               ──┬─  
    │                 ╰─── column `t.code` has type `number(id)` but is missing the expected `examples` property
────╯
